feat: change specialization api
rename name to label (for frontend) inside SpecializationResponse
allow everyone to view all specializations